txt icon align fix

--- a/styleAbout.css
+++ b/styleAbout.css
@@ -48,7 +48,7 @@
 
 .skillBox{
     width: 70%;
-    height: 61%;
+    height: 75%;
     background-color: rgb(255, 0, 144);
    display: grid;
    grid-template-columns: 1fr 1fr ;
@@ -56,6 +56,14 @@
    justify-items: center; 
    align-items: center;
    
+}
+
+.iconwrapper p{
+    margin: 0;
+    font-size: 12px;
+    color: var(--resolution-blue);
+    justify-content: center;
+    margin-top: .5rem;
 }
 
 .icons{
@@ -81,7 +89,8 @@
  }
 
  .skillBox{
-    /* flex-direction: row; */
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -90,8 +99,8 @@
  }
 
 .icons{
-    width: 3rem;
-    height: 4rem;
+    width: 4rem;
+    height: 5rem;
 }
 
  .abtTxtImgBox{
